# one_hour_build_timer

./: .gitignore  CLAUDE.md  index.html  install.sh  package-lock.json  package.json  vite.config.ts
.claude/: settings.json
.claude/commands/app/: install.md
docs/: IMPLEMENTATION_PLAN.md
src/: App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/ContextMenu/: ContextMenu.css  ContextMenu.tsx
src/components/Controls/: ColorPairingButton.tsx  MenuButton.tsx  ModeToggleButton.tsx  NewWindowButton.tsx  PlayPauseButton.tsx  PresetButtons.tsx  ResetButton.tsx  ThemeButton.tsx  index.ts
src/components/Menu/: MenuOverlay.tsx
src/components/Timer/: ColonSeparator.tsx  TimeSegment.tsx  TimerDisplay.tsx  index.ts
src/components/Title/: EditableTitle.tsx
src/config/: app.ts  colors.ts  index.ts  presets.ts  storage-keys.test.ts  storage-keys.ts  timing.ts  window.ts
src/hooks/: index.ts  useColorPairing.ts  useColorTheme.ts  useKeyboardShortcuts.ts  useLocalStorage.ts  useScaling.ts  useTimer.ts  useUserPresets.ts  useWindowId.ts  useWindowRegistry.ts
src/styles/: animations.css  global.css  theme.css
src/types/: index.ts  timer.ts  window.ts
src/utils/: tauri-commands.ts  tauri.ts  time.test.ts  time.ts
