[package]
name = "countdown-timer"
version = "0.1.0"
description = "A countdown timer desktop widget"
authors = ["you"]
edition = "2021"

[lib]
name = "countdown_timer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
